@@ -110,7 +110,7 @@ $messages = array(
 'delete'           => 'Ilangana',
 'deletethispage'   => 'Busak kaca iki',
 'protect'          => 'Reksanen',
-'unprotect'        => 'apus reksa',
+'unprotect'        => 'Apus reksa',
 'newpage'          => 'Kaca Anyar',
 'talkpage'         => 'Diskuseke kaca iki',
 'specialpage'      => 'Kaca Astamiwa',
