@@ -125,7 +125,7 @@ $messages = array(
 'protect'           => 'Amlig',
 'protect_change'    => 'islan ang proteksyon',
 'protectthispage'   => 'Amligan ang dya nga pahina',
-'unprotect'         => 'huksun ang proteksyon',
+'unprotect'         => 'Huksun ang proteksyon',
 'unprotectthispage' => 'Huksun ang proteksyon sa dya nga pahina',
 'newpage'           => 'Bag-o nga pahina',
 'talkpage'          => 'Sogdanunun ang dya nga pahina',
