@@ -171,7 +171,7 @@ $messages = array(
 'protect'           => 'Besjerm',
 'protect_change'    => 'beveiligingsstatus verangere',
 'protectthispage'   => 'Beveilige',
-'unprotect'         => 'vriegaeve',
+'unprotect'         => 'Vriegaeve',
 'unprotectthispage' => 'Besjerming opheffe',
 'newpage'           => 'Nuuj pazjena',
 'talkpage'          => 'euverlikpazjena',
