@@ -93,7 +93,7 @@ $messages = array(
 'deletethispage'    => 'Afi kulobala bye petulo',
 'protect'           => 'Bukelezi',
 'protectthispage'   => 'Bukelezi bye petulo',
-'unprotect'         => 'bukelezi tamuhile',
+'unprotect'         => 'Bukelezi tamuhile',
 'unprotectthispage' => 'Bukelezi tamuhile bye petulo',
 'newpage'           => 'Petulo hlolinu',
 'talkpage'          => 'Bulelezi bye petulo',
