@@ -226,7 +226,7 @@ $messages = array(
 'protect'           => 'Proteger',
 'protect_change'    => 'alterar protecção',
 'protectthispage'   => 'Proteger esta página',
-'unprotect'         => 'desproteger',
+'unprotect'         => 'Desproteger',
 'unprotectthispage' => 'Desproteger esta página',
 'newpage'           => 'Nova página',
 'talkpage'          => 'Discutir esta página',
